Sushi cutting mechanic added to game

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ Thumbs.db
 # Safety: project-specific overrides
 # =========================
 /SubzeroSushi/Binaries
+/SubzeroSushi/Saved/Config/CrashReportClient
